--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           workload_identity_provider: ${{ secrets.GOOGLE_WORKLOAD_IDENTITY_PROVIDER_NAME }}
           service_account: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_EMAIL }}
-      - run: gsutil ls gs://oidc-test-bucket-abc
+      - run: gcloud storage ls gs://oidc-test-bucket-abc
