--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -10,6 +10,7 @@ jobs:
       id-token: write
       contents: read
     steps:
+      - uses: actions/checkout@v3
       - uses: google-github-actions/auth@v0
         with:
           workload_identity_provider: ${{ secrets.GOOGLE_WORKLOAD_IDENTITY_PROVIDER_NAME }}
